--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,6 +20,12 @@ header{
 .menu-opcoes a{
     color: #003366;
 }
+.menu-opcoes a:hover{
+    color: #007dc6;
+}
+.menu-opcoes a:active{
+    color: #867dc6;
+}
 .menu-opcoes ul li{
     display: inline;
     margin-left: 20px;
@@ -31,6 +37,10 @@ header{
 body{
     color: #333333;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+.busca{
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 .busca input{
     vertical-align: middle;
@@ -62,6 +72,24 @@ body{
     margin-bottom: 1px;
     padding: 5px 10px;
 }
+.menu-departamentos li ul{
+    display: none;
+}
+.menu-departamentos li:hover ul{
+    display: block;
+}
+.menu-departamentos ul ul li{
+    background-color: #dcdcdc;
+}
+.menu-departamentos li li a:before{
+    content: '\272A';
+    padding-right: 3px;
+}
+.painel h2::before{
+    content: '\2756';
+    padding-right: 5px;
+    opacity: 0.4;
+}
 .menu-departamentos a{
     color: #333333;
     text-decoration: none;
@@ -73,6 +101,8 @@ body{
     margin: 10px 0;
     padding: 10px;
     width: 445px;
+    border-radius: 4px;
+    box-shadow: inset 1px 1px 4px #999;
 }
 .painel li{
     display: inline-block;
@@ -86,6 +116,7 @@ body{
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 10px;
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
 }
 .painel a{
     color: #333;
@@ -96,8 +127,44 @@ body{
 .novidades{
     float: left;
     background-color: #f5dcdc;
+    background: linear-gradient(#f5dcdc, #bebef4);
 }
 .mais-vendidos{
     float: right;
-    background-color: #dcdcf5;
+    background: #dcdcf5;
+    background: linear-gradient(#dcdcf5, #f4bebe);
+}
+footer{
+    background-image: url(../img/fundo-rodape.png);
+    clear: both;
+    padding: 20px 0;
+}
+footer .container{
+    position: relative;
+}
+.social{
+    position: absolute;
+    top: 12px;
+    right: 0;
+}
+.social li{
+    float: left;
+    margin-left: 25px;
+}
+.social a{
+    /* tamanho da imagem */
+    height: 32px;
+    width: 32px;
+    /* image replacement */
+    display: block;
+    text-indent: -9999px;
+}
+.social a[href*="facebook.com"]{
+    background-image: url(../img/facebook.png);
+}
+.social a[href*="twitter.com"]{
+    background-image: url(../img/twitter.png);
+}
+.social a[href*="plus.google.com"]{
+    background-image: url(../img/googleplus.png);
 }
