--- a/css/sobre.css
+++ b/css/sobre.css
@@ -13,6 +13,15 @@ h2{
     border-bottom: 2px solid #333333;
     margin-top: 30px;
 }
+h1 + p{
+    text-indent: 0;
+}
+:not(p) + p:first-line{
+    font-variant: small-caps;
+}
+p::first-letter{
+    font-weight: bold;
+}
 p{
     padding: 0 45px;
     text-indent: 15px;
