--- a/css/produto.css
+++ b/css/produto.css
@@ -89,3 +89,55 @@ label[for=azul]::after{
     padding: 0.5em 1em;
     margin: 1em 0;
 }
+@media(min-width: 630px){
+    .produto{
+        position: relative;
+        padding-left: 40%;
+        font-size: 1.2em;
+    }
+    .cores{
+        position: static;
+        padding: 0;
+    }
+    .cores legend{
+        position: static;
+    }
+.cores label img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 35%;
+    max-height: 100%;
+}
+.cores label::after{
+    position: static;
+    float: left;
+    margin-right: 10px;
+}
+fieldset{
+    display: inline-block;
+    vertical-align: top;
+
+    margin: 1em 0;
+    min-width: 200px;
+    width: 45%;
+}
+}
+.detalhes{
+    padding: 2em 0;
+}
+.detalhes h2{
+    font-size: 1.5em;
+    line-height: 2;
+}
+.detalhes p{
+    margin: 1em 0;
+    font-size: 1em;
+    line-height: 1.5;
+    max-width: 36em;
+}
+@media(min-width: 500px){
+    .detalhes{
+        font-size: 1.2em;
+    }
+}
