ajustes na pag produto

--- a/css/produto.css
+++ b/css/produto.css
@@ -60,6 +60,11 @@ label[for=azul]::after{
     display: block;
     max-width: 100%;
 }
+.produto-back{
+    background-color: #f2f2f2;
+    margin-top: 1em;
+    border-top: 2px solid #ccc;
+}
 .produto{
     color: #333;
     line-height: 1.3;
@@ -89,7 +94,7 @@ label[for=azul]::after{
     padding: 0.5em 1em;
     margin: 1em 0;
 }
-@media(min-width: 630px){
+@media(min-width: 940px){
     .produto{
         position: relative;
         padding-left: 40%;
@@ -108,6 +113,7 @@ label[for=azul]::after{
     left: 0;
     max-width: 35%;
     max-height: 100%;
+    border: 2px solid #ccc;
 }
 .cores label::after{
     position: static;
@@ -140,4 +146,25 @@ fieldset{
     .detalhes{
         font-size: 1.2em;
     }
+}
+table{
+    border-spacing: 0.2em;
+    border-collapse: separate;
+}
+thead{
+    background-color: #999;
+}
+thead th{
+    font-weight: bold;
+    padding: 0.3em 1em;
+    text-align: center;
+}
+td{
+    padding: 0.3em;
+}
+tr:nth-child(2n){
+    background-color: #ccc;
+}
+td:first-child{
+    font-style: italic;
 }
